--- a/index.html
+++ b/index.html
@@ -1,45 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			rel="shortcut icon"
-			href="images/favicon.ico"
-			type="image/x-icon"
-		/>
-		<link rel="stylesheet" href="css/custom.css" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-			integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
-		<title>Emerson - layout</title>
-	</head>
-	<body>
-		<nav class="navbar">
-			<div class="max-width">
-				<div class="logo">
-					<a href="index.html"> Emerson </a>
-				</div>
-				<ul class="menu">
-					<li><a href="#" class="menu-btn">Home</a></li>
-					<li><a href="#" class="menu-btn">Serviços</a></li>
-					<li><a href="#" class="menu-btn">Contato </a></li>
-				</ul>
-				<div class="menu-btn"><i class="fas fa-bars"></i></div>
-			</div>
-		</nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/custom.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Emerson - layout</title>
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="max-width">
+        <div class="logo">
+          <a href="index.html"> Emerson </a>
+        </div>
+        <ul class="menu">
+          <li><a href="#" class="menu-btn">Home</a></li>
+          <li><a href="#" class="menu-btn">Serviços</a></li>
+          <li><a href="#" class="menu-btn">Contato </a></li>
+        </ul>
+        <div class="menu-btn"><i class="fas fa-bars"></i></div>
+      </div>
+    </nav>
 
-		<div class="test-texto"><h1>emerson</h1></div>
-		<div class="test-texto"><h1>emerson</h1></div>
-		<div class="test-texto"><h1>emerson</h1></div>
-		<div class="test-texto"><h1>emerson</h1></div>
-		<div class="test-texto"><h1>emerson</h1></div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-		<script src="js/custom.js"></script>
-	</body>
+    <section class="top">
+      <div class="max-width">
+        <div class="top-content">
+          <div class="text-1">Temos a solução</div>
+          <div class="text-2">que a sua empresa precisa</div>
+          <div class="text-3">Podemos ajudar a sua empresa!</div>
+          <a href="#">Entrar em contato</a>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <span>Create By <a href="#">Emerson Pessoa</a></span>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/custom.js"></script>
+  </body>
 </html>
