stylizing services,serv-content and card

--- a/index.html
+++ b/index.html
@@ -41,6 +41,80 @@
       </div>
     </section>
 
+    <section class="services">
+      <div class="max-width">
+        <h2 class="title">Serviços</h2>
+        <div class="serv-content">
+          <div class="card">
+            <div class="box">
+              <i>icone</i>
+              <div class="text">Serviço 1</div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
+                elementum massa nulla. Aliquam fermentum purus id arcu
+                vestibulum, sed commodo felis feugiat. Nulla eget accumsan
+                libero.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <i>icone</i>
+              <div class="text">Serviço 2</div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
+                elementum massa nulla. Aliquam fermentum purus id arcu
+                vestibulum, sed commodo felis feugiat. Nulla eget accumsan
+                libero.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="box">
+              <i>icone</i>
+              <div class="text">Serviço 3</div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
+                elementum massa nulla. Aliquam fermentum purus id arcu
+                vestibulum, sed commodo felis feugiat. Nulla eget accumsan
+                libero.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+    <div>teste</div>
+
     <footer>
       <span>Create By <a href="#">Emerson Pessoa</a></span>
     </footer>
