--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="serv-content">
           <div class="card">
             <div class="box">
-              <i>icone</i>
+              <i class="fas fa-code"></i>
               <div class="text">Serviço 1</div>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
@@ -60,7 +60,7 @@
 
           <div class="card">
             <div class="box">
-              <i>icone</i>
+              <i class="fas fa-laptop-code"></i>
               <div class="text">Serviço 2</div>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
@@ -73,7 +73,7 @@
 
           <div class="card">
             <div class="box">
-              <i>icone</i>
+              <i class="fas fa-mobile-alt"></i>
               <div class="text">Serviço 3</div>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
