--- a/index.html
+++ b/index.html
@@ -1,158 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/custom.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <title>Emerson - layout</title>
-  </head>
-  <body>
-    <nav class="navbar">
-      <div class="max-width">
-        <div class="logo">
-          <a href="index.html"> Emerson </a>
-        </div>
-        <ul class="menu">
-          <li><a href="#" class="menu-btn">Home</a></li>
-          <li><a href="#" class="menu-btn">Serviços</a></li>
-          <li><a href="#" class="menu-btn">Contato </a></li>
-        </ul>
-        <div class="menu-btn"><i class="fas fa-bars"></i></div>
-      </div>
-    </nav>
-
-    <section class="top">
-      <div class="max-width">
-        <div class="top-content">
-          <div class="text-1">Temos a solução</div>
-          <div class="text-2">que a sua empresa precisa</div>
-          <div class="text-3">Podemos ajudar a sua empresa!</div>
-          <a href="#">Entrar em contato</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="services">
-      <div class="max-width">
-        <h2 class="title">Serviços</h2>
-        <div class="serv-content">
-          <div class="card">
-            <div class="box">
-              <i class="fas fa-code"></i>
-              <div class="text">Serviço 1</div>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
-                elementum massa nulla. Aliquam fermentum purus id arcu
-                vestibulum, sed commodo felis feugiat. Nulla eget accumsan
-                libero.
-              </p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="shortcut icon"
+            href="images/favicon.ico"
+            type="image/x-icon"
+        />
+        <link rel="stylesheet" href="css/custom.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+            integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <title>Emerson - layout</title>
+    </head>
+    <body>
+        <nav class="navbar">
+            <div class="max-width">
+                <div class="logo">
+                    <a href="index.html"> Emerson </a>
+                </div>
+                <ul class="menu">
+                    <li><a href="#" class="menu-btn">Home</a></li>
+                    <li><a href="#" class="menu-btn">Serviços</a></li>
+                    <li><a href="#" class="menu-btn">Contato </a></li>
+                </ul>
+                <div class="menu-btn"><i class="fas fa-bars"></i></div>
             </div>
-          </div>
+        </nav>
 
-          <div class="card">
-            <div class="box">
-              <i class="fas fa-laptop-code"></i>
-              <div class="text">Serviço 2</div>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
-                elementum massa nulla. Aliquam fermentum purus id arcu
-                vestibulum, sed commodo felis feugiat. Nulla eget accumsan
-                libero.
-              </p>
+        <section class="top">
+            <div class="max-width">
+                <div class="top-content">
+                    <div class="text-1">Temos a solução</div>
+                    <div class="text-2">que a sua empresa precisa</div>
+                    <div class="text-3">Podemos ajudar a sua empresa!</div>
+                    <a href="#">Entrar em contato</a>
+                </div>
             </div>
-          </div>
+        </section>
 
-          <div class="card">
-            <div class="box">
-              <i class="fas fa-mobile-alt"></i>
-              <div class="text">Serviço 3</div>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
-                elementum massa nulla. Aliquam fermentum purus id arcu
-                vestibulum, sed commodo felis feugiat. Nulla eget accumsan
-                libero.
-              </p>
+        <section class="services">
+            <div class="max-width">
+                <h2 class="title">Serviços</h2>
+                <div class="serv-content">
+                    <div class="card">
+                        <div class="box">
+                            <i class="fas fa-code"></i>
+                            <div class="text">Serviço 1</div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. In elementum massa nulla.
+                                Aliquam fermentum purus id arcu vestibulum, sed
+                                commodo felis feugiat. Nulla eget accumsan
+                                libero.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="box">
+                            <i class="fas fa-laptop-code"></i>
+                            <div class="text">Serviço 2</div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. In elementum massa nulla.
+                                Aliquam fermentum purus id arcu vestibulum, sed
+                                commodo felis feugiat. Nulla eget accumsan
+                                libero.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="box">
+                            <i class="fas fa-mobile-alt"></i>
+                            <div class="text">Serviço 3</div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. In elementum massa nulla.
+                                Aliquam fermentum purus id arcu vestibulum, sed
+                                commodo felis feugiat. Nulla eget accumsan
+                                libero.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
+        </section>
 
-    <section class="contact">
-      <div class="max-width">
-        <h2 class="title">Contato</h2>
-        <div class="contact-content">
-          <div class="column left">
-            <p>
-              Phasellus vitae suscipit arcu. Donec nec nulla aliquam, congue
-              justo et, vulputate lacus. In sollicitudin venenatis ullamcorper.
-            </p>
-            <div class="icons">
-              <div class="row">
-                <i class="fas fa-user"></i>
-                <div class="head">
-                  <div class="info">Empresa</div>
-                  <div class="sun-title">Emerson</div>
-                </div>
-              </div>
+        <section class="contact" id="contact">
+            <div class="max-width">
+                <h2 class="title">Contato</h2>
+                <div class="contact-content">
+                    <div class="column left">
+                        <p>
+                            Aliquam facilisis vitae ante eu consequat. Nullam a
+                            mi vel metus tristique commodo id quis diam.
+                        </p>
+                        <div class="icons">
+                            <div class="row">
+                                <i class="fas fa-user"></i>
+                                <div class="info">
+                                    <div class="head">Empresa</div>
+                                    <div class="sub-title">Emerson</div>
+                                </div>
+                            </div>
 
-              <div class="row">
-                <i class="fas fa-map-marker-alt"></i>
-                <div class="head">
-                  <div class="info">Endereço</div>
-                  <div class="sun-title">
-                    Conj.Cidade Nova VIII, Ananindeua-PA
-                  </div>
-                </div>
-              </div>
+                            <div class="row">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <div class="info">
+                                    <div class="head">Endereço</div>
+                                    <div class="sub-title">
+                                        Cidade Nova VIII, Ananindeua - PA
+                                    </div>
+                                </div>
+                            </div>
 
-              <div class="row">
-                <i class="fas fa-envelope"></i>
-                <div class="head">
-                  <div class="info">Email</div>
-                  <div class="sun-title">emersonpessoa011108@gmail.com</div>
+                            <div class="row">
+                                <i class="fas fa-envelope"></i>
+                                <div class="info">
+                                    <div class="head">E-mail</div>
+                                    <div class="sub-title">
+                                        emersonpessoa011108@gmail.com
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column right">
+                        <div class="text">Mensagem de Contato</div>
+                        <form>
+                            <div class="fields">
+                                <div class="field name">
+                                    <input
+                                        type="text"
+                                        placeholder="Digite o nome"
+                                        required
+                                    />
+                                </div>
+                                <div class="field email">
+                                    <input
+                                        type="email"
+                                        placeholder="Digite o e-mail"
+                                        required
+                                    />
+                                </div>
+                            </div>
+
+                            <div class="field">
+                                <input
+                                    type="text"
+                                    placeholder="Digite o assunto"
+                                    required
+                                />
+                            </div>
+
+                            <div class="field textarea">
+                                <textarea
+                                    cols="30"
+                                    rows="10"
+                                    placeholder="Digite o conteúdo"
+                                    required
+                                ></textarea>
+                            </div>
+
+                            <div class="button-area">
+                                <button type="submit">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
+        </section>
 
-          <div class="column rigth">
-            <div class="text">Mensagem de Contato</div>
-            <form>
-              <div class="fields">
-                <div class="field name">
-                  <input type="text" placeholder="Digite o nome" required>
-                </div>
-                <div class="field email">
-                  <input type="email" placeholder="Digite o email" required>
-                </div>
-              </div>
-              <div class="field">
-                <input type="text" placeholder="Digite o assunto" required>
-              </div>
-              <div class="field textarea">
-                <textarea placeholder="Digite o conteúdo"></textarea>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
+        <footer>
+            <span>Create By <a href="#">Emerson Pessoa</a></span>
+        </footer>
 
-    <footer>
-      <span>Create By <a href="#">Emerson Pessoa</a></span>
-    </footer>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/custom.js"></script>
-  </body>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="js/custom.js"></script>
+    </body>
 </html>
