--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
         <nav class="navbar">
             <div class="max-width">
                 <div class="logo">
-                    <a href="index.html"> Emerson </a>
+                    <a href="#top"> Emerson </a>
                 </div>
                 <ul class="menu">
-                    <li><a href="#" class="menu-btn">Home</a></li>
-                    <li><a href="#" class="menu-btn">Serviços</a></li>
-                    <li><a href="#" class="menu-btn">Contato </a></li>
+                    <li><a href="#top" class="menu-btn">Home</a></li>
+                    <li><a href="#services" class="menu-btn">Serviços</a></li>
+                    <li><a href="#contact" class="menu-btn">Contato </a></li>
                 </ul>
                 <div class="menu-btn"><i class="fas fa-bars"></i></div>
             </div>
         </nav>
 
-        <section class="top">
+        <section class="top" id="top">
             <div class="max-width">
                 <div class="top-content">
                     <div class="text-1">Temos a solução</div>
                     <div class="text-2">que a sua empresa precisa</div>
                     <div class="text-3">Podemos ajudar a sua empresa!</div>
-                    <a href="#">Entrar em contato</a>
+                    <a href="#">Entrar em Contato</a>
                 </div>
             </div>
         </section>
 
-        <section class="services">
+        <section class="services" id="services">
             <div class="max-width">
                 <h2 class="title">Serviços</h2>
                 <div class="serv-content">
@@ -54,11 +54,9 @@
                             <i class="fas fa-code"></i>
                             <div class="text">Serviço 1</div>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. In elementum massa nulla.
-                                Aliquam fermentum purus id arcu vestibulum, sed
-                                commodo felis feugiat. Nulla eget accumsan
-                                libero.
+                                Aenean consectetur feugiat eros at aliquet.
+                                Integer ac nisi dui. Nam maximus nunc non
+                                aliquet aliquet.
                             </p>
                         </div>
                     </div>
@@ -68,11 +66,9 @@
                             <i class="fas fa-laptop-code"></i>
                             <div class="text">Serviço 2</div>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. In elementum massa nulla.
-                                Aliquam fermentum purus id arcu vestibulum, sed
-                                commodo felis feugiat. Nulla eget accumsan
-                                libero.
+                                Aenean consectetur feugiat eros at aliquet.
+                                Integer ac nisi dui. Nam maximus nunc non
+                                aliquet aliquet.
                             </p>
                         </div>
                     </div>
@@ -82,11 +78,9 @@
                             <i class="fas fa-mobile-alt"></i>
                             <div class="text">Serviço 3</div>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit. In elementum massa nulla.
-                                Aliquam fermentum purus id arcu vestibulum, sed
-                                commodo felis feugiat. Nulla eget accumsan
-                                libero.
+                                Aenean consectetur feugiat eros at aliquet.
+                                Integer ac nisi dui. Nam maximus nunc non
+                                aliquet aliquet.
                             </p>
                         </div>
                     </div>
@@ -107,7 +101,7 @@
                             <div class="row">
                                 <i class="fas fa-user"></i>
                                 <div class="info">
-                                    <div class="head">Empresa</div>
+                                    <div class="head">Empresa :</div>
                                     <div class="sub-title">Emerson</div>
                                 </div>
                             </div>
@@ -115,9 +109,9 @@
                             <div class="row">
                                 <i class="fas fa-map-marker-alt"></i>
                                 <div class="info">
-                                    <div class="head">Endereço</div>
+                                    <div class="head">Endereço :</div>
                                     <div class="sub-title">
-                                        Cidade Nova VIII, Ananindeua - PA
+                                        Cidade Nova VIII, Ananindeua-PA
                                     </div>
                                 </div>
                             </div>
@@ -125,7 +119,7 @@
                             <div class="row">
                                 <i class="fas fa-envelope"></i>
                                 <div class="info">
-                                    <div class="head">E-mail</div>
+                                    <div class="head">E-mail :</div>
                                     <div class="sub-title">
                                         emersonpessoa011108@gmail.com
                                     </div>
@@ -178,7 +172,6 @@
                 </div>
             </div>
         </section>
-
         <footer>
             <span>Create By <a href="#">Emerson Pessoa</a></span>
         </footer>
