--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="text-1">Temos a solução</div>
                     <div class="text-2">que a sua empresa precisa</div>
                     <div class="text-3">Podemos ajudar a sua empresa!</div>
-                    <a href="#">Entrar em Contato</a>
+                    <a href="#contact">Entrar em Contato</a>
                 </div>
             </div>
         </section>
