--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#top"> Emerson </a>
                 </div>
                 <ul class="menu">
-                    <li><a href="#top" class="menu-btn">Home</a></li>
+                    <li><a href="#top" class="menu-btn active-link">Home</a></li>
                     <li><a href="#services" class="menu-btn">Serviços</a></li>
                     <li><a href="#contact" class="menu-btn">Contato </a></li>
                 </ul>
