--- a/index.html
+++ b/index.html
@@ -23,10 +23,17 @@
         <nav class="navbar">
             <div class="max-width">
                 <div class="logo">
-                    <a href="#top"> Emerson </a>
+                    <a href="#top">
+                        Emerson&copy;
+                        <script>
+                            document.write(new Date().getFullYear());
+                        </script>
+                    </a>
                 </div>
                 <ul class="menu">
-                    <li><a href="#top" class="menu-btn active-link">Home</a></li>
+                    <li>
+                        <a href="#top" class="menu-btn active-link">Home</a>
+                    </li>
                     <li><a href="#services" class="menu-btn">Serviços</a></li>
                     <li><a href="#contact" class="menu-btn">Contato </a></li>
                 </ul>
